force-app/main/default/objects/Health_Intent__c/Health_Intent__c.object-meta.xml
<CustomObject>
    <label>Health Intent</label>
    <nameField>
        <displayFormat>HI-{0000000}</displayFormat>
        <label>Health Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Intents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>