force-app/main/default/objects/Health_Intent__c/fields/Active_on_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Active_on_Social_Media__c</fullName>
    <label>Active on Social Media</label>
    <length>150</length>
    <type>Text</type>
</CustomField>