force-app/main/default/objects/Health_Intent__c/fields/Activity_Details__c.field-meta.xml
<CustomField>
    <fullName>Activity_Details__c</fullName>
    <description>ABHI</description>
    <label>Activity Details</label>
    <type>TextArea</type>
</CustomField>