force-app/main/default/objects/Health_Intent__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Steps</fullName>
            </value>
            <value>
                <fullName>Calories</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Non trackable (FA)</fullName>
            </value>
            <value>
                <fullName>None(FA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>