force-app/main/default/objects/Health_Intent__c/fields/Do_you_track_these__c.field-meta.xml
<CustomField>
    <fullName>Do_you_track_these__c</fullName>
    <description>ABHI</description>
    <label>Do you track these</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>