force-app/main/default/objects/Health_Intent__c/fields/Frequency_in_a_month__c.field-meta.xml
<CustomField>
    <fullName>Frequency_in_a_month__c</fullName>
    <description>ABHI</description>
    <label>Frequency in a month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>6-9</fullName>
            </value>
            <value>
                <fullName>10-13</fullName>
            </value>
            <value>
                <fullName>&gt;13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>