force-app/main/default/objects/Health_Intent__c/fields/Health_Return__c.field-meta.xml
<CustomField>
    <fullName>Health_Return__c</fullName>
    <description>ABHI</description>
    <label>Health Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>