force-app/main/default/objects/Health_Intent__c/fields/How_do_you_track_your_activity__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_track_your_activity__c</fullName>
    <label>How do you track your activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google fit</fullName>
            </value>
            <value>
                <fullName>Fitbit</fullName>
            </value>
            <value>
                <fullName>Garmin</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
            <value>
                <fullName>Jawbone</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Applehealth</fullName>
                <label>Apple health</label>
            </value>
            <value>
                <fullName>S health</fullName>
                <label>Samsung health</label>
            </value>
            <value>
                <fullName>Honor</fullName>
            </value>
            <value>
                <fullName>Amazefit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>