force-app/main/default/objects/Health_Intent__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <formula>IF( Member_Id__r.IsPersonAccount , TRIM(Member_Id__r.FirstName) + &quot; &quot; + TRIM(Member_Id__r.LastName), Member_Id__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member</label>
    <type>Text</type>
</CustomField>