force-app/main/default/objects/Health_Intent__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Intents</relationshipLabel>
    <relationshipName>Health_Intents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>