force-app/main/default/objects/Health_Intent__c/fields/Social_Media_Id__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Id__c</fullName>
    <label>Social Media Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>