force-app/main/default/objects/Health_Intent__c/fields/Waiting_Period_Permanent_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Permanent_Exclusion__c</fullName>
    <label>Waiting Period &amp; Permanent Exclusion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don’t Remember</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>