force-app/main/default/objects/Health_Intent__c/fields/What_activities_are_you_currently_doing__c.field-meta.xml
<CustomField>
    <fullName>What_activities_are_you_currently_doing__c</fullName>
    <label>What activities are you currently doing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Zumba</fullName>
            </value>
            <value>
                <fullName>Cardio @ home Aerobics</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Workouts</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Yoga @ gym</fullName>
            </value>
            <value>
                <fullName>Yoga @ home</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>