force-app/main/default/objects/Health_Intent__c/fields/Which_phone_are_you_using__c.field-meta.xml
<CustomField>
    <fullName>Which_phone_are_you_using__c</fullName>
    <label>Which phone are you using</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Basic Phone</fullName>
            </value>
            <value>
                <fullName>Does not use phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>