force-app/main/default/objects/Health_Intent__c/recordTypes/Health_Intent.recordType-meta.xml
<RecordType>
    <fullName>Health_Intent</fullName>
    <active>true</active>
    <label>Health Intent</label>
</RecordType>